samples/positive/unused/resources/120/43.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:3e9ece8312829b63636558393dd742a8f66e7f935b333198e98fdaf087550315
size 19856
