samples/negative/resources/fp34/6.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:603aa544344c1fea12a9be6eb942a128d1bbfeade4b5e3e7b93470584b5b9610
size 26856
